dua footer mobile căn giua

--- a/trang7.css
+++ b/trang7.css
@@ -361,6 +361,7 @@ a {
     }
     #container {
         max-width: 100%;
+        text-align: center;
     }
     .header-grid-layout {
         display: grid;
